
=== ppracer 0.5 alpha2 ===

2005-10-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/sg/vnc.* src/course_load.* src/quadtree.*
	added class VNCArray
	changed code to use the new class

2005-10-25  Volker Stroebel <volker@planetpenguin.de>
	* src/credits.cpp
	cleanups

2005-10-24  Volker Stroebel <volker@planetpenguin.de>
	* src/hier_utils.* src/hier.cpp data/models/*/model.nut
	removed unused eye values from struct SceneNode

2005-10-22  Volker Stroebel <volker@planetpenguin.de>
	* (*)
	some cleanups
	
	* src/ftgl/*
	removed unused code

2005-10-21  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	reset item states if course is not reloaded

	* data/config.nut.in * src/trackmarks.*
	added max_track_marks
	
	* src/track_marks.* src/course_mirror.cpp
	mirror track marks
	
	* src/track_marks.cpp src/racing.cpp
	use chached config values
	
	* src/nmrcl.cpp
	remove unused code

2005-10-20  Volker Stroebel <volker@planetpenguin.de>
	* src/hier*
	replaced Material with ppogl::Material
	
	* src/pp_types.h src/*
	moved code to other locations
	removed pp_types.h
	
	* src/ppogl/base/glwrappers.h src/hier_util.cpp
	added glu::Quadric
	
	* src/hier_util.cpp
	use glu::Quadric to draw sphere
	
	* src/course_load.cpp
	clear location for reset points
	
	* src/loading.cpp src/course_load.*
	return to course selection if loading fails
	
	* src/ppogl/ppogl_script.*
	added error handling
	
	* src/course_load.*
	reload course only if necessary

2005-10-19  Volker Stroebel <volker@planetpenguin.de>
	* src/quadtree.cpp
	removed unneeded checks
	
	* src/ppogl/models/model_ac.cpp
	fixed uninitialized values
	fixed deletion of not allocated pointers

2005-10-18  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/sg/geoms.*
	improoved Polyhedron and Polygon class
	
	* src/hier_utils.cpp src/phys_sim.cpp src/elements.cpp
	fixed memleaks
	
	* src/ppogl/models/model_ac.*
	fixed memleak
	use PP_WARNING instead of printf
	